<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:id="@+id/status_text_view"
        android:textSize="18sp"
        android:layout_marginLeft="24dp">        
        
    </TextView>    
    <ScrollView 
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/scroll_view"
        android:layout_below="@+id/status_text_view"
        android:background="@drawable/app_icon_stop">        
    </ScrollView>
    <LinearLayout
        android:id="@+id/origin_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_below="@+id/scroll_view"
        android:layout_marginLeft="100dp"
        android:orientation="vertical"
        >
	    <TextView 
	        android:layout_width="144dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/origin_text_view"
	        android:text="@string/origin"
	        android:gravity="center"
	        />
	    <Button 
	        android:layout_width="144dp"
	        android:layout_height="wrap_content"/>
	    <Button 
	        android:layout_width="144dp"
	        android:layout_height="wrap_content"/>
	    <Button 
	        android:layout_width="144dp"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/destin_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/origin_layer"
        android:layout_toRightOf="@+id/origin_layer"
        android:orientation="vertical">        
    <TextView 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:id="@+id/destin_text_view"
        android:text="@string/destination"
        android:gravity="center"
        />
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text=""/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/road_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/origin_layer"
        android:layout_toRightOf="@+id/destin_layer"
        android:orientation="vertical">
    <TextView 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:id="@+id/road_text_view"
        android:text="@string/road"
        android:gravity="center"
        />
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text=""/>
    </LinearLayout>
    
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/home"
        android:layout_below="@+id/origin_layer"/>
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:id="@+id/note"
        android:layout_toRightOf="@+id/home"
        android:layout_below="@+id/origin_layer"/>
    <Button 
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:text="@string/action_stop_trip"
        android:layout_toRightOf="@+id/note"
        android:layout_below="@+id/origin_layer"/>
    
</RelativeLayout>
